--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "short_name": "My PWAS",
-    "name": "My PWAS",
+    "short_name": "Website Tester",
+    "name": "Website Tester",
     "icons": [
         {
             "src": "assets/icons/icon.png",
