--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Website to test your website using Google tools",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "sass": "sass --watch src/styles/styles.scss styles.css",
+    "dev": "concurrently --kill-others \"npm run sass & npm run server\"",
+    "server": "live-server"
   },
   "repository": {
     "type": "git",
@@ -17,6 +20,11 @@
   },
   "homepage": "https://github.com/devpato/webTester#readme",
   "devDependencies": {
+    "concurrently": "^5.2.0",
     "cssnano": "^4.1.10"
+  },
+  "dependencies": {
+    "http-server": "^0.12.3",
+    "live-server": "^1.2.1"
   }
 }
